# ChangeLog for media-tv/xdtv
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.31 2006/06/18 12:37:22 flameeyes Exp $

*xdtv-2.3.2-r1 (18 Jun 2006)

  18 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/xdtv-2.3.2-strict-aliasing.patch, +xdtv-2.3.2-r1.ebuild:
  Add new revision with patch to fix strict-aliasing breakage.

  04 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
  Install the defaults in the right directory when using modular xorg. Thanks
  Donnie for the detection action.

  19 May 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
  Bump xvid dependency as per bug #133306 thanks to Michael Mauch.

  04 May 2006; Diego Pettenò <flameeyes@gentoo.org> -xdtv-2.3.0.ebuild,
  -xdtv-2.3.1.ebuild:
  Drop old versions.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-xdtv-2.2.0-r1,
  files/digest-xdtv-2.3.0, files/digest-xdtv-2.3.1, files/digest-xdtv-2.3.2,
  Manifest:
  Fixing SHA256 digest, pass four

  07 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
  Don't run the whole autotools chain if unneeded, use only eautomake.

  28 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libxdtv-i18n-all-1.3.0-ldflags.patch, xdtv-2.3.2.ebuild:
  Add patch to make i18n support respect LDFLAGS and set a soname.

  14 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2.ebuild:
  Drop fonts installed by autotools.

*xdtv-2.3.2 (14 Mar 2006)

  14 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> +xdtv-2.3.2.ebuild:
  Version bump.

*xdtv-2.3.1 (09 Mar 2006)

  09 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> +xdtv-2.3.1.ebuild:
  Version bump, now uses internal ffmpeg (patched) copy.

  01 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.0.ebuild:
  Make libXaw optional in case NeXt and Xaw3d are not requested. Thanks to TGL
  <degrenier@easyconnect.fr> in bug #124479.
