@@ -1,6 +1,10 @@
 # ChangeLog for media-tv/xdtv
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.31 2006/06/18 12:37:22 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.32 2006/06/23 22:42:05 flameeyes Exp $
+
+  23 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.2-r1.ebuild:
+  Replace PIC conditionals with __PIC__ conditionals, as suggested by
+  Alexandre Carsac, to try to fix bug #133375.
 
 *xdtv-2.3.2-r1 (18 Jun 2006)
 
